--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,12 @@
 :root {
   --background: #ffffff; /* todo: handle light mode */
   --foreground: #171717;
+  --bb-teal: #33ced8;
+  --bb-dark-gray: #181e24;
+  --bb-yellow: #f0be72;
+  --bb-blue: #499bfc;
+  --bb-green: #60af73;
+  --bb-red: #d95468;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,6 +23,5 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  /* font-family: Arial, Helvetica, sans-serif; */
-  font-family: var(--font-roboto-mono), var(--font-roboto-sans), sans-serif;;
+  font-family: var(--font-roboto-mono), var(--font-roboto-sans), Arial, Helvetica, sans-serif;
 }
