--- a/app/globals.css
+++ b/app/globals.css
@@ -3,25 +3,58 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff; /* todo: handle light mode */
-  --foreground: #171717;
-  --bb-teal: #33ced8;
-  --bb-dark-gray: #181e24;
-  --bb-yellow: #f0be72;
-  --bb-blue: #499bfc;
-  --bb-green: #60af73;
-  --bb-red: #d95468;
+   /* --bb-dark-gray: #181e24; */
+   --bb-dark-gray: #181e24;
+   --bb-dark-gray-900: #262f37;
+   --bb-dark-gray-800: #333f4b;
+   --bb-dark-gray-700: #404f5e;
+   --bb-dark-gray-600: #4d5f71;
+   --bb-dark-gray-500: #5a6f84;
+   --bb-dark-gray-400: #677f97;
+   --bb-dark-gray-300: #798fa4;
+   --bb-dark-gray-200: #8d9fb1;
+   --bb-dark-gray-100: #a0afbe;
+   --bb-dark-gray-50: #b3bfcb;
+   --bb-dark-gray-25: #c6cfd8;
+   --bb-dark-gray-10: #d9dfe5;
+   --bb-dark-gray-0: #eceff2;
+   --bb-white: #ffffff; /* todo: handle light mode */
+
+   --bb-teal: #33ced8;
+   --bb-yellow: #f0be72;
+   --bb-blue: #499bfc;
+   --bb-green: #60af73;
+   --bb-red: #d95468;
+
+   --background: var(--bb-white);
+   --foreground: var(--bb-dark-gray);
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #191f25;
-    --foreground: #a0b3c6;
-  }
+   :root {
+      --background: var(--bb-dark-gray);
+      --foreground: #a0b3c6;
+   }
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: var(--font-roboto-mono), var(--font-roboto-sans), Arial, Helvetica, sans-serif;
+   color: var(--foreground);
+   background: var(--background);
+   font-family: var(--font-roboto-mono), var(--font-roboto-sans), Arial,
+      Helvetica, sans-serif;
+}
+
+body:has(.translate-y-0) {
+   overflow: hidden;
+}
+
+.dark-card-shadow {
+   -webkit-box-shadow:
+      0px 3px 5px -1px rgba(0, 0, 0, 0.2),
+      0px 5px 8px 0px rgba(0, 0, 0, 0.14),
+      0px 1px 14px 0px rgba(0, 0, 0, 0.12);
+   box-shadow:
+      0px 3px 5px -1px rgba(0, 0, 0, 0.2),
+      0px 5px 8px 0px rgba(0, 0, 0, 0.14),
+      0px 1px 14px 0px rgba(0, 0, 0, 0.12);
 }
