improve home page; add PrimaryCta; add photo

--- a/app/globals.css
+++ b/app/globals.css
@@ -32,6 +32,8 @@
    --bb-black: #000000;
 
    --bb-teal: #33ced8;
+   --bb-teal-dark-300: #239097;
+
    --bb-yellow: #f0be72;
    --bb-blue: #499bfc;
 
