--- a/app/globals.css
+++ b/app/globals.css
@@ -35,6 +35,8 @@
    --bb-teal-dark-300: #239097;
 
    --bb-yellow: #f0be72;
+   --bb-yellow-dark-300: #a8854f;
+
    --bb-blue: #499bfc;
 
    --bb-jade: #60af73;
